2011-04-08  Yi Shen  <yi.4.shen@nokia.com>

Reviewed by Antonio Gomes.

        [Qt]REGRESSION(r82243): fast/events/onsearch-enter.html fails
        https://bugs.webkit.org/show_bug.cgi?id=57472

        Unskips the fast/events/onsearch-enter.html test.

        * platform/qt/Skipped:
2011-04-08  Yi Shen  <yi.4.shen@nokia.com>

        Reviewed by Antonio Gomes.

        [Qt]REGRESSION(r82243): fast/events/onsearch-enter.html fails
        https://bugs.webkit.org/show_bug.cgi?id=57472

        Avoid to insert new line for both keydown event & keypress event.

        * WebCoreSupport/EditorClientQt.cpp:
        (WebCore::EditorClientQt::handleInputMethodKeydown):

Canonical link: https://commits.webkit.org/73073@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83295 268f45cc-cd09-0410-ab3c-d52691b4dbfc